# evolve-incremental-tauri

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: initialization.js  main.rs
