[package]
name = "evolve-incremental"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-confirm", "dialog-message", "shell-open", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
chrono = "0.4.24"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/remote-ipc" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/remote-ipc" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
